[package]
name = "wkt"
description = "Rust read/write support for well-known text (WKT)"
version = "0.10.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/wkt"
autobenches = true
readme = "README.md"
keywords = ["geo", "geospatial", "wkt"]
edition = "2021"

[dependencies]
abi_stable = { version = "0.11.3" }
geo-types = { git = "https://github.com/invenium/geo.git", tag = "geo-types-v0.7.12-stable-abi", optional = true }
num-traits = "0.2"
serde = { version = "1.0", default-features = false, optional = true }
thiserror = "1.0.23"
log = "0.4.17"

[dev-dependencies]
criterion = { version = "0.5.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[features]
default = ["geo-types"]

[[bench]]
name = "parse"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
